cmake_minimum_required(VERSION 3.14)
project(offerInterviewGuide)

set(CMAKE_CXX_STANDARD 11)


add_executable(05 05_06/05.cpp)
add_executable(06 05_06/06.cpp)
add_executable(08 07_09/09.cpp)
add_executable(07 07_09/07.cpp)
add_executable(10_II 10I_10II/10_II.cpp)
add_executable(10_I 10I_10II/10_I.cpp)