cmake_minimum_required(VERSION 3.14)
project(offerInterviewGuide)

set(CMAKE_CXX_STANDARD 11)


add_executable(05 05_06/05.cpp)
add_executable(06 05_06/06.cpp)
add_executable(08 07_09/09.cpp)
add_executable(07 07_09/07.cpp)
add_executable(10_II 10I_10II/10_II.cpp)
add_executable(10_I 10I_10II/10_I.cpp)
add_executable(12 11_12/12.cpp)
add_executable(11 11_12/11.cpp)
add_executable(13 13_14/13.cpp)
add_executable(14 13_14/14-I.cpp)
add_executable(14-II 13_14/14-II.cpp)
add_executable(15 15_16/15.cpp)
add_executable(16 15_16/16.cpp)
add_executable(17 17_18/17.cpp)
add_executable(18 17_18/18.cpp)